// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TodaysMovers > renders 5 gainers + 5 losers with avatars + analysis links (populated) 1`] = `
<div>
  <section>
    <div
      class="flex items-baseline justify-between mb-3"
    >
      <h2
        class="text-sm font-bold uppercase tracking-wider text-ink"
      >
        Today’s Movers
      </h2>
      <span
        class="text-[11px] text-caption font-mono"
      >
        08 Jun
      </span>
    </div>
    <div
      class="grid grid-cols-1 md:grid-cols-2 gap-4"
    >
      <div
        class="bg-surface border border-border rounded-xl overflow-hidden"
      >
        <div
          class="px-3 py-2 border-b border-border bg-bg/30"
        >
          <h3
            class="text-[11px] font-bold uppercase tracking-wider text-caption"
          >
            Top Gainers
          </h3>
        </div>
        <div>
          <a
            class="flex items-center gap-2.5 px-3 py-2 hover:bg-bg/40 transition border-b border-border last:border-b-0"
            data-testid="movers-row"
            href="/analysis/HDFCBANK"
          >
            <span
              aria-label="HDFCBANK logo"
              class="inline-flex shrink-0 items-center justify-center overflow-hidden rounded bg-raised border border-border h-6 w-6 text-[10px]"
              data-testid="ticker-avatar-image"
            >
              <img
                alt=""
                class="h-full w-full object-contain"
                decoding="async"
                height="24"
                loading="lazy"
                referrerpolicy="no-referrer"
                src="https://www.google.com/s2/favicons?domain=hdfcbank.com&sz=128"
                width="24"
              />
            </span>
            <span
              class="font-mono font-semibold text-sm text-ink truncate min-w-0 flex-shrink"
            >
              HDFCBANK
            </span>
            <span
              class="ml-auto font-mono text-sm tabular-nums text-green-600 dark:text-green-400"
            >
              +4.2%
            </span>
          </a>
          <a
            class="flex items-center gap-2.5 px-3 py-2 hover:bg-bg/40 transition border-b border-border last:border-b-0"
            data-testid="movers-row"
            href="/analysis/RELIANCE"
          >
            <span
              aria-label="RELIANCE logo"
              class="inline-flex shrink-0 items-center justify-center overflow-hidden rounded bg-raised border border-border h-6 w-6 text-[10px]"
              data-testid="ticker-avatar-image"
            >
              <img
                alt=""
                class="h-full w-full object-contain"
                decoding="async"
                height="24"
                loading="lazy"
                referrerpolicy="no-referrer"
                src="https://www.google.com/s2/favicons?domain=ril.com&sz=128"
                width="24"
              />
            </span>
            <span
              class="font-mono font-semibold text-sm text-ink truncate min-w-0 flex-shrink"
            >
              RELIANCE
            </span>
            <span
              class="ml-auto font-mono text-sm tabular-nums text-green-600 dark:text-green-400"
            >
              +3.8%
            </span>
          </a>
          <a
            class="flex items-center gap-2.5 px-3 py-2 hover:bg-bg/40 transition border-b border-border last:border-b-0"
            data-testid="movers-row"
            href="/analysis/TATAMOTORS"
          >
            <span
              aria-label="TATAMOTORS logo"
              class="inline-flex shrink-0 items-center justify-center overflow-hidden rounded bg-raised border border-border h-6 w-6 text-[10px]"
              data-testid="ticker-avatar-image"
            >
              <img
                alt=""
                class="h-full w-full object-contain"
                decoding="async"
                height="24"
                loading="lazy"
                referrerpolicy="no-referrer"
                src="https://www.google.com/s2/favicons?domain=tatamotors.com&sz=128"
                width="24"
              />
            </span>
            <span
              class="font-mono font-semibold text-sm text-ink truncate min-w-0 flex-shrink"
            >
              TATAMOTORS
            </span>
            <span
              class="ml-auto font-mono text-sm tabular-nums text-green-600 dark:text-green-400"
            >
              +3.5%
            </span>
          </a>
          <a
            class="flex items-center gap-2.5 px-3 py-2 hover:bg-bg/40 transition border-b border-border last:border-b-0"
            data-testid="movers-row"
            href="/analysis/MARUTI"
          >
            <span
              aria-label="MARUTI logo"
              class="inline-flex shrink-0 items-center justify-center overflow-hidden rounded bg-raised border border-border h-6 w-6 text-[10px]"
              data-testid="ticker-avatar-image"
            >
              <img
                alt=""
                class="h-full w-full object-contain"
                decoding="async"
                height="24"
                loading="lazy"
                referrerpolicy="no-referrer"
                src="https://www.google.com/s2/favicons?domain=marutisuzuki.com&sz=128"
                width="24"
              />
            </span>
            <span
              class="font-mono font-semibold text-sm text-ink truncate min-w-0 flex-shrink"
            >
              MARUTI
            </span>
            <span
              class="ml-auto font-mono text-sm tabular-nums text-green-600 dark:text-green-400"
            >
              +2.9%
            </span>
          </a>
          <a
            class="flex items-center gap-2.5 px-3 py-2 hover:bg-bg/40 transition border-b border-border last:border-b-0"
            data-testid="movers-row"
            href="/analysis/LT"
          >
            <span
              aria-label="LT logo"
              class="inline-flex shrink-0 items-center justify-center overflow-hidden rounded bg-raised border border-border h-6 w-6 text-[10px]"
              data-testid="ticker-avatar-image"
            >
              <img
                alt=""
                class="h-full w-full object-contain"
                decoding="async"
                height="24"
                loading="lazy"
                referrerpolicy="no-referrer"
                src="https://www.google.com/s2/favicons?domain=larsentoubro.com&sz=128"
                width="24"
              />
            </span>
            <span
              class="font-mono font-semibold text-sm text-ink truncate min-w-0 flex-shrink"
            >
              LT
            </span>
            <span
              class="ml-auto font-mono text-sm tabular-nums text-green-600 dark:text-green-400"
            >
              +2.7%
            </span>
          </a>
        </div>
      </div>
      <div
        class="bg-surface border border-border rounded-xl overflow-hidden"
      >
        <div
          class="px-3 py-2 border-b border-border bg-bg/30"
        >
          <h3
            class="text-[11px] font-bold uppercase tracking-wider text-caption"
          >
            Top Losers
          </h3>
        </div>
        <div>
          <a
            class="flex items-center gap-2.5 px-3 py-2 hover:bg-bg/40 transition border-b border-border last:border-b-0"
            data-testid="movers-row"
            href="/analysis/BHARTIARTL"
          >
            <span
              aria-label="BHARTIARTL logo"
              class="inline-flex shrink-0 items-center justify-center overflow-hidden rounded bg-raised border border-border h-6 w-6 text-[10px]"
              data-testid="ticker-avatar-image"
            >
              <img
                alt=""
                class="h-full w-full object-contain"
                decoding="async"
                height="24"
                loading="lazy"
                referrerpolicy="no-referrer"
                src="https://www.google.com/s2/favicons?domain=airtel.in&sz=128"
                width="24"
              />
            </span>
            <span
              class="font-mono font-semibold text-sm text-ink truncate min-w-0 flex-shrink"
            >
              BHARTIARTL
            </span>
            <span
              class="ml-auto font-mono text-sm tabular-nums text-red-600 dark:text-red-400"
            >
              -3.1%
            </span>
          </a>
          <a
            class="flex items-center gap-2.5 px-3 py-2 hover:bg-bg/40 transition border-b border-border last:border-b-0"
            data-testid="movers-row"
            href="/analysis/TCS"
          >
            <span
              aria-label="TCS logo"
              class="inline-flex shrink-0 items-center justify-center overflow-hidden rounded bg-raised border border-border h-6 w-6 text-[10px]"
              data-testid="ticker-avatar-image"
            >
              <img
                alt=""
                class="h-full w-full object-contain"
                decoding="async"
                height="24"
                loading="lazy"
                referrerpolicy="no-referrer"
                src="https://www.google.com/s2/favicons?domain=tata.com&sz=128"
                width="24"
              />
            </span>
            <span
              class="font-mono font-semibold text-sm text-ink truncate min-w-0 flex-shrink"
            >
              TCS
            </span>
            <span
              class="ml-auto font-mono text-sm tabular-nums text-red-600 dark:text-red-400"
            >
              -2.7%
            </span>
          </a>
          <a
            class="flex items-center gap-2.5 px-3 py-2 hover:bg-bg/40 transition border-b border-border last:border-b-0"
            data-testid="movers-row"
            href="/analysis/INFY"
          >
            <span
              aria-label="INFY logo"
              class="inline-flex shrink-0 items-center justify-center overflow-hidden rounded bg-raised border border-border h-6 w-6 text-[10px]"
              data-testid="ticker-avatar-image"
            >
              <img
                alt=""
                class="h-full w-full object-contain"
                decoding="async"
                height="24"
                loading="lazy"
                referrerpolicy="no-referrer"
                src="https://www.google.com/s2/favicons?domain=infosys.com&sz=128"
                width="24"
              />
            </span>
            <span
              class="font-mono font-semibold text-sm text-ink truncate min-w-0 flex-shrink"
            >
              INFY
            </span>
            <span
              class="ml-auto font-mono text-sm tabular-nums text-red-600 dark:text-red-400"
            >
              -2.4%
            </span>
          </a>
          <a
            class="flex items-center gap-2.5 px-3 py-2 hover:bg-bg/40 transition border-b border-border last:border-b-0"
            data-testid="movers-row"
            href="/analysis/WIPRO"
          >
            <span
              aria-label="WIPRO logo"
              class="inline-flex shrink-0 items-center justify-center overflow-hidden rounded bg-raised border border-border h-6 w-6 text-[10px]"
              data-testid="ticker-avatar-image"
            >
              <img
                alt=""
                class="h-full w-full object-contain"
                decoding="async"
                height="24"
                loading="lazy"
                referrerpolicy="no-referrer"
                src="https://www.google.com/s2/favicons?domain=wipro.com&sz=128"
                width="24"
              />
            </span>
            <span
              class="font-mono font-semibold text-sm text-ink truncate min-w-0 flex-shrink"
            >
              WIPRO
            </span>
            <span
              class="ml-auto font-mono text-sm tabular-nums text-red-600 dark:text-red-400"
            >
              -2.1%
            </span>
          </a>
          <a
            class="flex items-center gap-2.5 px-3 py-2 hover:bg-bg/40 transition border-b border-border last:border-b-0"
            data-testid="movers-row"
            href="/analysis/HCLTECH"
          >
            <span
              aria-label="HCLTECH logo"
              class="inline-flex shrink-0 items-center justify-center overflow-hidden rounded bg-raised border border-border h-6 w-6 text-[10px]"
              data-testid="ticker-avatar-image"
            >
              <img
                alt=""
                class="h-full w-full object-contain"
                decoding="async"
                height="24"
                loading="lazy"
                referrerpolicy="no-referrer"
                src="https://www.google.com/s2/favicons?domain=hcltech.com&sz=128"
                width="24"
              />
            </span>
            <span
              class="font-mono font-semibold text-sm text-ink truncate min-w-0 flex-shrink"
            >
              HCLTECH
            </span>
            <span
              class="ml-auto font-mono text-sm tabular-nums text-red-600 dark:text-red-400"
            >
              -1.9%
            </span>
          </a>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`TodaysMovers > renders the data-lag empty state when the response is stale 1`] = `
<div>
  <section>
    <div
      class="flex items-baseline justify-between mb-3"
    >
      <h2
        class="text-sm font-bold uppercase tracking-wider text-ink"
      >
        Today’s Movers
      </h2>
    </div>
    <div
      class="bg-surface border border-border rounded-xl px-4 py-8 text-center"
      data-testid="movers-empty"
    >
      <p
        class="text-xs text-caption"
      >
        Markets data lagging — try in a few minutes.
      </p>
    </div>
  </section>
</div>
`;

exports[`TodaysMovers > renders the skeleton before the API resolves (loading state) 1`] = `
<div>
  <section>
    <div
      class="flex items-baseline justify-between mb-3"
    >
      <h2
        class="text-sm font-bold uppercase tracking-wider text-ink"
      >
        Today’s Movers
      </h2>
    </div>
    <div
      class="grid grid-cols-1 md:grid-cols-2 gap-4"
      data-testid="movers-skeleton"
    >
      <div
        class="bg-surface border border-border rounded-xl overflow-hidden"
      >
        <div
          class="px-3 py-2 border-b border-border bg-bg/30"
        >
          <div
            class="h-3 w-20 bg-border rounded animate-pulse"
          />
        </div>
        <div>
          <div
            class="flex items-center gap-2.5 px-3 py-2 border-b border-border last:border-b-0"
          >
            <div
              class="h-6 w-6 bg-border rounded animate-pulse"
            />
            <div
              class="h-3 w-20 bg-border rounded animate-pulse"
            />
            <div
              class="ml-auto h-3 w-10 bg-border rounded animate-pulse"
            />
          </div>
          <div
            class="flex items-center gap-2.5 px-3 py-2 border-b border-border last:border-b-0"
          >
            <div
              class="h-6 w-6 bg-border rounded animate-pulse"
            />
            <div
              class="h-3 w-20 bg-border rounded animate-pulse"
            />
            <div
              class="ml-auto h-3 w-10 bg-border rounded animate-pulse"
            />
          </div>
          <div
            class="flex items-center gap-2.5 px-3 py-2 border-b border-border last:border-b-0"
          >
            <div
              class="h-6 w-6 bg-border rounded animate-pulse"
            />
            <div
              class="h-3 w-20 bg-border rounded animate-pulse"
            />
            <div
              class="ml-auto h-3 w-10 bg-border rounded animate-pulse"
            />
          </div>
          <div
            class="flex items-center gap-2.5 px-3 py-2 border-b border-border last:border-b-0"
          >
            <div
              class="h-6 w-6 bg-border rounded animate-pulse"
            />
            <div
              class="h-3 w-20 bg-border rounded animate-pulse"
            />
            <div
              class="ml-auto h-3 w-10 bg-border rounded animate-pulse"
            />
          </div>
          <div
            class="flex items-center gap-2.5 px-3 py-2 border-b border-border last:border-b-0"
          >
            <div
              class="h-6 w-6 bg-border rounded animate-pulse"
            />
            <div
              class="h-3 w-20 bg-border rounded animate-pulse"
            />
            <div
              class="ml-auto h-3 w-10 bg-border rounded animate-pulse"
            />
          </div>
        </div>
      </div>
      <div
        class="bg-surface border border-border rounded-xl overflow-hidden"
      >
        <div
          class="px-3 py-2 border-b border-border bg-bg/30"
        >
          <div
            class="h-3 w-20 bg-border rounded animate-pulse"
          />
        </div>
        <div>
          <div
            class="flex items-center gap-2.5 px-3 py-2 border-b border-border last:border-b-0"
          >
            <div
              class="h-6 w-6 bg-border rounded animate-pulse"
            />
            <div
              class="h-3 w-20 bg-border rounded animate-pulse"
            />
            <div
              class="ml-auto h-3 w-10 bg-border rounded animate-pulse"
            />
          </div>
          <div
            class="flex items-center gap-2.5 px-3 py-2 border-b border-border last:border-b-0"
          >
            <div
              class="h-6 w-6 bg-border rounded animate-pulse"
            />
            <div
              class="h-3 w-20 bg-border rounded animate-pulse"
            />
            <div
              class="ml-auto h-3 w-10 bg-border rounded animate-pulse"
            />
          </div>
          <div
            class="flex items-center gap-2.5 px-3 py-2 border-b border-border last:border-b-0"
          >
            <div
              class="h-6 w-6 bg-border rounded animate-pulse"
            />
            <div
              class="h-3 w-20 bg-border rounded animate-pulse"
            />
            <div
              class="ml-auto h-3 w-10 bg-border rounded animate-pulse"
            />
          </div>
          <div
            class="flex items-center gap-2.5 px-3 py-2 border-b border-border last:border-b-0"
          >
            <div
              class="h-6 w-6 bg-border rounded animate-pulse"
            />
            <div
              class="h-3 w-20 bg-border rounded animate-pulse"
            />
            <div
              class="ml-auto h-3 w-10 bg-border rounded animate-pulse"
            />
          </div>
          <div
            class="flex items-center gap-2.5 px-3 py-2 border-b border-border last:border-b-0"
          >
            <div
              class="h-6 w-6 bg-border rounded animate-pulse"
            />
            <div
              class="h-3 w-20 bg-border rounded animate-pulse"
            />
            <div
              class="ml-auto h-3 w-10 bg-border rounded animate-pulse"
            />
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
